docs(swagger): add createProduct handler docs
